refactor: isolate OpenLineage relational projection
Extract batch projection and raw-event persistence, add ordered run I/O state and terminal projection CAS, and consolidate the service, worker, benchmark, and regression coverage.